# suadelabs

./: .gitignore  .pre-commit-config.yaml  README.md  app.db  config.py  pyproject.toml  run.py
app/: __init__.py  app.py  database.py  models.py
app/report/: __init__.py  datatypes.py  generate.py  routes.py
tests/: test_suadelabs.py
tests/report/: __init__.py  test_generate_report.py
